<resources>
    <string name="app_name">Guest Reservation App</string>

    <!--    Credential Term -->
    <string name="password">Password</string>
    <string name="confirmed_password">Confirmed Password</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="confirmed_new_password">Confirmed New Password</string>
    <string name="username">Username</string>
    <string name="jot_title">Job Title</string>
    <string name="working_branch">Working Branch</string>

    <!--    Button -->
    <string name="login_btn">Sign In</string>
    <string name="register_btn">Sign Up</string>
    <string name="logout_btn">Sign Out</string>
    <string name="complete_btn">Complete</string>
    <string name="book">Book</string>
    <string name="book_now_btn">Book Now</string>
    <string name="select">Select</string>
    <string name="history">History</string>
    <string name="update_btn">Update</string>
    <string name="continue_btn">Continue</string>
    <string name="edit_btn">Edit</string>
    <string name="view_menu">View Menu</string>
    <string name="view_e_ticket">View E-Ticket</string>
    <string name="view_reservations">View Reservations</string>
    <string name="close_btn">Close</string>
    <string name="reset_btn">Reset</string>
    <string name="scan">Scan</string>
    <string name="add_item">Add Item</string>
    <string name="submit_btn">Submit</string>
    <string name="choose_img">Choose Image</string>

    <!--    Screen Title -->
    <string name="home">Home</string>
    <string name="menu">Menu</string>
    <string name="reservations">Reservations</string>
    <string name="reservation">Reservation</string>
    <string name="booking_offer">Booking Offer</string>
    <string name="discover">Discover</string>
    <string name="profile">Profile</string>
    <string name="my_points">My Points</string>
    <string name="reservation_history">Reservation History</string>
    <string name="my_profile">My Profile</string>
    <string name="settings">Settings</string>
    <string name="notification_settings">Notification Settings</string>
    <string name="reset_password">Reset Password</string>
    <string name="delete_account">Delete Account</string>
    <string name="confirm_booking">Confirm Booking</string>
    <string name="e_ticket">E-Ticket</string>
    <string name="notifications">Notifications</string>
    <string name="more">More</string>
    <string name="account_details">Account Details</string>
    <string name="change_branch_status">Change Branch Status</string>

<!--   Meal Time -->
    <string name="breakfast">Breakfast</string>
    <string name="lunch">Lunch</string>
    <string name="tea_time">Tea Time</string>
    <string name="dinner">Dinner</string>
    
    <string name="promotions">Promotions</string>
    <string name="burgers">Burgers</string>
    <string name="crispy_thighs">Crispy Thighs</string>
    <string name="beverages">Beverages</string>
    <string name="desserts">Desserts</string>

<!--  Available Service  -->
    <string name="night_menu">Night Menu</string>
    <string name="lobby_seating">Lobby Seating</string>
    <string name="open_24_hrs">Open 24 hrs</string>
    <string name="credit_card">Credit Card</string>
    <string name="restroom">Restroom</string>
    <string name="party_room">Party Room</string>
    <string name="wifi">Wifi</string>

<!--   Reservation Status -->
    <string name="pending">Pending</string>
    <string name="confirm">Confirmed</string>
    <string name="cancel">Cancel</string>
    <string name="attended">Attended</string>
    <string name="unattended">Unattended</string>
    <string name="booking_no">Booking No: </string>

<!--   Reservation Details -->
    <string name="date">Date</string>
    <string name="Time">Time</string>
    <string name="guest">Guest(s)</string>
    <string name="party_size">Party Size</string>
    <string name="occasion">Occasion</string>
    <string name="special_offers">Special Offer(s)</string>
    <string name="guest_and_dinner_info">Guest and Dinner Info</string>
    
<!--    Profile Details-->
    <string name="email">Email</string>
    <string name="personal_details">Personal Details</string>
    <string name="name">Name</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="gender">Gender</string>

<!--   Notification Settings -->
    <string name="all_push_notifications">All Push Notifications</string>
    <string name="my_reservations">My Reservations</string>
    <string name="activity_and_promotion">Activity and Promotion</string>
    <string name="restaurant_close">Restaurant Close</string>
    
<!--   Menu Item -->
    <string name="food_name">Food Name</string>
    <string name="price">Price</string>
    <string name="meal_time">Meal Time</string>
    <string name="meals">Meals</string>
    <string name="normal_meal">Normal</string>
    <string name="large_meal">Large</string>
    <string name="special_large_meal">Special Large</string>
    <string name="category">Category</string>
    <string name="is_promotion">Is Promotion</string>
    <string name="camera">Camera</string>
    <string name="photo">Photo</string>

<!--    Other Regular Text-->
    <string name="zero">0</string>
    <string name="serving_time">Serving Time:</string>
    <string name="location">Location</string>
    <string name="select_one">Select one</string>
    <string name="without_offer">Without Offer</string>
    <string name="reference_no">Reference No: </string>
    <string name="optional">Optional</string>
    <string name="points">points</string>
    <string name="earned">Earned</string>
    <string name="used">Used</string>

<!--    Link -->
    <string name="see_all">See All</string>
    <string name="view_details">View Details</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>