<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="120dp"
    android:background="@android:color/transparent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!--   Hidden Buttons -->
    <LinearLayout
        android:id="@+id/hiddenButtons"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentEnd="true"
        android:orientation="horizontal">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardBtnEdit"
            android:layout_width="75dp"
            android:layout_height="match_parent"
            android:backgroundTint="@color/orange"
            app:strokeWidth="0dp"
            app:cardCornerRadius="0dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="38dp"
                android:layout_height="38dp"
                android:layout_gravity="center"
                android:src="@drawable/edit_icon"
                android:tint="@color/white" />
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardBtnCancel"
            android:layout_width="75dp"
            android:layout_height="match_parent"
            android:backgroundTint="@color/red"
            app:strokeWidth="0dp"
            app:cardCornerRadius="0dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="38dp"
                android:layout_height="38dp"
                android:layout_gravity="center"
                android:src="@drawable/close_icon"
                android:tint="@color/white" />
        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>

<!--   Reservation Item -->
    <LinearLayout
        android:id="@+id/ticketItem"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:background="@drawable/ticket">

    <LinearLayout
        android:id="@+id/reservationStatus"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.5"
        android:gravity="center"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imgStatus"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/pending_icon" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="4dp"
            android:text="@string/pending"
            android:textAppearance="@style/regular_text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:paddingHorizontal="32dp"
        android:paddingVertical="16dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLength="10"
            android:maxLines="1"
            android:text="@string/location"
            android:textAppearance="@style/small_text" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Time"
                android:textAppearance="@style/small_text" />

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="4dp"
                android:layout_height="4dp"
                android:layout_marginHorizontal="12dp"
                android:src="@drawable/circle" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textNumOfGuest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/party_size"
                android:textAppearance="@style/small_text" />
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textAppearance="@style/small_text" />
    </LinearLayout>

    <!--   Item option icon button (Edit and Cancel) -->
    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/imgBtnOption"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_gravity="center_vertical"
        android:background="@android:color/transparent"
        android:scaleType="fitXY"
        android:src="@drawable/ming_cute_more_icon" />
    </LinearLayout>

</RelativeLayout>